# study_rust

./: .gitignore  Cargo.toml
cargo_examples/iced_example/: Cargo.toml
cargo_examples/iced_example/src/: main.rs
cargo_examples/tauri-example/: Cargo.toml  package.json  pnpm-lock.yaml
cargo_examples/tauri-example/src-tauri/: Cargo.toml  tauri.conf.json
src/: main.rs
study_basic/s1_hello_world/: Cargo.toml
study_basic/s2_guess/: Cargo.toml
study_basic/s2_guess/src/: main.rs
study_basic/s3_variables/: Cargo.toml
study_basic/s3_variables/src/: main.rs
study_basic/s4_ownership/crates/s4_1_ownership/: Cargo.toml
study_basic/s4_ownership/crates/s4_1_ownership/src/: main.rs
study_basic/s4_ownership/crates/s4_2_reference/: Cargo.toml
study_basic/s4_ownership/crates/s4_2_reference/src/: main.rs
study_basic/s4_ownership/crates/s4_3_slice/: Cargo.toml
study_basic/s4_ownership/crates/s4_3_slice/src/: main.rs
study_basic/s4_ownership/src/: main.rs
study_basic/s5_struct/crates/s5_2_rectangles/: Cargo.toml
study_basic/s5_struct/crates/s5_2_rectangles/src/: main.rs
study_basic/s5_struct/src/: main.rs
study_basic/s6_enum_match/: Cargo.toml
